# Intpc_local_planner

./: .data  README.md  README_old.md  clone_submodules.sh  子模块克隆问题解决方案.md
src/rm_nav_bringup/: CMakeLists.txt
src/rm_nav_bringup/PCD/: try.pcd
src/rm_nav_bringup/config/reality/: measurement_params_real.yaml  segmentation_real.yaml
src/rm_nav_bringup/config/simulation/: nav2_params_intpc.yaml  nav2_params_sim.yaml
src/rm_nav_bringup/launch/: bringup_sim.launch.py
src/rm_nav_bringup/map/: rmul_2025.data  rmul_2025.yaml  try.pgm  try.yaml
src/rm_navigation/Intpc_local_planner/: CMakeLists.txt  README.md  intpc_local_planner_plugin.xml  package.xml
src/rm_navigation/Intpc_local_planner/include/intpc_local_planner/: intpc_local_planner.h  intpc_local_planner_ros.h
src/rm_navigation/Intpc_local_planner/scripts/: cbf.py  detect.py  dinosaur.mat  eight.mat  fourier.py  kinematics.py  main.py  obstacle.py  ring.mat  vector.py
src/rm_navigation/Intpc_local_planner/src/: intpc_local_planner.cpp  intpc_local_planner_ros.cpp
src/rm_navigation/rm_navigation/: README_PLANNER_SWITCH.md
src/rm_navigation/rm_navigation/launch/: bringup_rm_navigation.py  localization_amcl_launch.py  map_server_launch.py  navigation_launch.py
src/rm_navigation/rm_navigation/params/: nav2_params_intpc.yaml  nav2_params_teb.yaml
src/rm_navigation/rm_navigation/rviz/: nav2.rviz
