<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intpc_local_planner</name>
  <version>0.1.0</version>
  <description>Intpc Local Planner for Navigation2</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>nav2_common</buildtool_depend>

  <depend>costmap_converter</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <system_depend>libg2o</system_depend>
  <depend>dwb_critics</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>teb_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_2d_utils</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>nav2_bringup</exec_depend>
  
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/intpc_local_planner_plugin.xml" />
  </export>
</package>